--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --watch --mode=development",
-    "start": "webpack  serve --open --mode=development",
+    "watch": "webpack --watch",
+    "start": "webpack serve --open",
     "build": "webpack --mode=production"
   },
   "repository": {
