--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,11 @@
     "compilerOptions": {
         "outDir": "./dist/",
         "sourceMap": true,
+        "noImplicitUseStrict": true,
+        "alwaysStrict": false,
         "noImplicitAny": true,
         "module": "es6",
         "target": "es5",
-        "jsx": "react",
         "allowJs": true,
         "moduleResolution": "node"
     }
